# wplayer

./: .gitignore  CMakeLists.txt  README.md  wplayer.kdev4
config/: log.conf  log.conf.sample  wplayer.conf  wplayer.conf.sample
service/: wplayer.service
src/: api_controller.cpp  api_controller.h  database.cpp  database.h  file_controller.cpp  file_controller.h  files_listing_controller.cpp  files_listing_controller.h  http_config.cpp  http_config.h  http_connection_handler.cpp  http_connection_handler.h  http_controller.cpp  http_controller.h  magic_handler.cpp  magic_handler.h  main.cpp  movie_controller.cpp  movie_controller.h  mpv_manager.cpp  mpv_manager.h  mpv_manager_impl.cpp  mpv_manager_impl.h  mpv_manager_p.h  not_found_exception.cpp  not_found_exception.h  options.h  options_parser.cpp  options_parser.h  picojson.h  player_service.cpp  player_service.h  sets_controller.cpp  sets_controller.h  utils.cpp  utils.h
src/crow/: crow_all.h
src/ws/: server_ws.hpp
web/: current.html  custom.html  index.html  movies.html  navbar.html  playlist.html  settings.html  settings_advanced.html  settings_multimedia_sets.html
web/css/: app.css
web/img/: logo.xcf
web/js/: current.js  custom.js  files.service.js  movies.js  navbar.js  player.service.js  playlist.js  sets.service.js  settings.js  settings_advanced.js  settings_multimedia_sets.js  wplayer.js
